# AniShift

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml
anishift/: AGENTS.md  __init__.py  bootstrap.py  errors.py
anishift/cli/: AGENTS.md  __init__.py  banner.py  commands.py  completer.py  main.py  pipeline_ui.py  settings_panel.py  shell.py
anishift/config/: AGENTS.md  __init__.py  settings.py  user_settings.py  workspace.py
anishift/pipeline/: AGENTS.md  __init__.py  runner.py  types.py
anishift/platform/: AGENTS.md  __init__.py  binaries.py
anishift/services/: AGENTS.md  __init__.py  _base.py
anishift/services/extraction/: AGENTS.md  __init__.py  errors.py  service.py  tracks.py  types.py
anishift/services/subtitles/: AGENTS.md  __init__.py  classifier.py  errors.py  service.py  srt.py  text.py  txt.py  types.py
anishift/services/translation/: AGENTS.md  __init__.py  _retry.py  chunking.py  config.py  constants.py  dedup.py  errors.py  linebreak.py  protocols.py  service.py  types.py
anishift/setup/: AGENTS.md  __init__.py  doctor.py  installer.py  manifest.py
anishift/utils/: AGENTS.md  _portable.py  _retry.py  device.py  safe_path.py  secrets.py  timing.py
anishift/utils/logger/: AGENTS.md  __init__.py  cli.py  config.py  core.py  decorators.py  log_reader.py  log_viewer.py  modes.py  scrubber.py  stats.py  timing.py
anishift/utils/rich_console/: AGENTS.md  __init__.py  console.py  theme.py  utilities.py
anishift/utils/timer/: AGENTS.md  __init__.py
config/: README.md
docs/: plan-anishift.md  todo-mangashift.md
docs/plans/: 2026-07-12-etap-2-shell.md  2026-07-16-etap-2.5-pobieracz-binarek.md  _index.md  etap-1-fundament.md  etap-2-shell.md  etap-2.5-pobieracz-binarek-v2.md  etap-2.5-wymagania.md  etap-3-ekstrakcja-refaktor.md  etap-3-plan.md  etap-3-wymagania.md  etap-4-bugi-ux-wymagania.md  etap-4-chunker-linebreak.md  etap-4-modul-wymagania-final.md  etap-4-plan.md  etap-4-poprawki-v2.md  etap-4-poprawki.md  etap-4-przeglad-ustalenia.md  etap-4-realizacja-plan.md  etap-4-refaktor-jakosc.md  etap-4-tlumaczenie.md  etap-4-wymagania-v2.md  etap-4-wymagania.md  etap-5-llm.md  etap-6-tts-audio.md  etap-7-skladanie-e2e.md  etap-8-dystrybucja-binarek.md
docs/plans/future/: auto-download-anime.md  mkv-integration-plugin.md  other-feature-ideas.md
docs/reference/: _index.md  stan-repo.md  todo-mangashift.md
docs/reference/audyt-mm-avh/: 00-mapa-projektu.md  01-root-config.md  02-modules-ekstrakcja-merge.md  03-modules-napisy.md  04-modules-tts.md  05-utils.md  06-wzorzec-mangashift.md  07-binarki-vs-python.md  08-wzorzec-echoreader-tts.md  09-tui-stack.md  audyt-pelny.md  wzor-raportu.md
docs/reference/mangashift-architecture/: docelowa-architektura-jedno-zrodlo.md  engine-factory-standard.md  engine-identity-standard.md  engine-standard.md  frontend-module-standard.md  model-asset-standard.md  model-system.md  naming-glossary.md  pipeline-step-standard.md  runtime-backends.md  runtime-lifecycle.md  service-standard.md  (+1 more)
scripts/: chunk_demo.py
scripts/hooks/: check_commit_msg.py  check_const_docstrings.py  check_test_comments.py
tests/: AGENTS.md  conftest.py  test_banner.py  test_binaries.py  test_commands.py  test_completer.py  test_doctor.py  test_extraction_service.py  test_extraction_tracks.py  test_installer.py  test_manifest.py  test_multi_progress.py  test_pipeline_runner.py  test_regression_classifier.py  test_user_settings.py
tests/cli/: test_banner.py  test_commands.py  test_completer.py
tests/config/: test_user_settings.py
tests/data/: mushoku-tensei-s3-03.json  youjo-senki-ii-01.json
tests/pipeline/: test_pipeline_runner.py  test_pipeline_translate.py
tests/platform/: test_binaries.py
tests/scripts/: test_check_commit_msg.py  test_check_const_docstrings.py  test_check_test_comments.py
tests/setup/: test_doctor.py  test_installer.py  test_manifest.py  test_setup_cli.py
tests/workspace/: test_workspace.py
utils/: __init__.py  _portable.py  device.py  safe_fs.py
utils/logger/: _time_helpers.py  cli.py  config.py  errors.py  modes.py  scrubber.py  stats.py  timing.py
utils/rich_console/: __init__.py  console.py
utils/timer/: __main__.py
(+96 files in other folders)
