[project]
name = "anishift"
version = "0.1.0"
description = "AniShift - Terminal-based anime lector for Polish."
readme = "README.md"
authors = [
    { name = "Mateusz Mróz", email = "mateuszmroz001@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "deepl>=1.30.0",
    "edge-tts>=7.2.8",
    "google-genai>=2.11.0",
    "googletrans>=4.0.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "natsort>=8.4.0",
    "openai>=2.45.0",
    "prompt-toolkit>=3.0.52",
    "pyasstosrt>=1.5.0",
    "pydantic-settings>=2.14.2",
    "pydub>=0.25.1",
    "pysrt>=1.1.2",
    "pysubs2>=1.8.1",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
anishift = "anishift.cli.main:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = ["anishift", "utils"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "external",
    "workspace",
    "build",
    "dist",
    ".claude",
    ".github",
    "scripts/tmp",
    "utils",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "BLE",   # flake8-blind-except
    "G",     # flake8-logging-format
    "T20",   # flake8-print
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "PT",    # flake8-pytest-style
    "TRY",   # tryceratops (exception handling)
    "PERF",  # perflint
    "PL",    # pylint
    "LOG",   # flake8-logging
    "D",     # pydocstyle
    "RUF",   # ruff-specific
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "PLR2004"]
"scripts/**" = ["D", "T20"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
exclude = [
    "utils/",
    "scripts/tmp/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
